# repatcher

./: CMakeLists.txt  Makefile
.github/workflows/: c-cpp.yml
amxmodx/include/: repatcher.inc
amxmodx/scripting/: readme.txt  selftest.sma
msvc/: repatcher.sln
msvc/libudis86/: libudis86.lib
src/: Makefile  chookmanager.cpp  cmodule.cpp  jit.cpp  natives.cpp  precompiled.h  repatcher.cpp  utils.cpp
src/libudis86/: CMakeLists.txt  udis86.c
